# cg_p2p_client

./: Cargo.toml
src/: main.rs
tinyp2p/: Cargo.toml
tinyp2p/src/: config.rs  error.rs  lib.rs  service.rs  transport.rs
tinyp2p/src/protocol/: mod.rs  req_resp.rs
