[package]
name = "cg_p2p_client"
version = "1.0.0"
edition = "2021"

[dependencies]

tinyp2p = { version = "1.0.0", path = "tinyp2p" }
log = { version = "0.4", features = ["std", "serde"] }
tokio = {version = "1.32.0", features = ["full"]}
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
libp2p = {version = ">= 0.52.3", features = ["tokio", "ping",
    "identify",
    "kad", "noise", "macros", "request-response", "gossipsub", "tcp", "yamux"]}