[package]
name = "tinyp2p"
version = "1.0.0"
edition = "2021"

[dependencies]

async-std = { version = "1.12", features = ["attributes"] }
clap = { version = "4.3.23", features = ["derive"] }
either = "1.9"
env_logger = "0.10"
futures = "0.3.28"
libp2p = {version = ">= 0.52.3", features = ["tokio", "ping",
    "identify",
    "kad", "noise", "macros", "request-response", "gossipsub", "tcp", "yamux"]}
void = "1.0.2"
itertools = "0.11"
async-trait = "0.1"
bs58 = "0.5"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "1.0.0"
tokio = {version = "1.32.0", features = ["full"]}
unsigned-varint = { version = "0.7", features = [
    "futures",
    "asynchronous_codec",
] }
